add thread-based mux

--- a/hw2/Makefile
+++ b/hw2/Makefile
@@ -1,12 +1,12 @@
-CC = gcc
-CXX = g++
+CC = gcc -Wall
+CXX = g++ -Wall
 INCLUDE_OPENCV = `pkg-config --cflags --libs opencv4`
 LINK_PTHREAD = -lpthread
 
-CLIENT = client.c
-SERVER = server.c
+CLIENT = client.cpp
+SERVER = server.cpp
 OPEN_CV = openCV.cpp
-PTHREAD = pthread.c
+PTHREAD = pthread.cpp
 CLI = client
 SER = server
 CV = openCV
@@ -15,13 +15,13 @@ PTH = pthread
 all: server client opencv pthread
   
 server: $(SERVER)
-	$(CC) $(SERVER) -o $(SER)  
+	$(CXX) $(SERVER) -o $(SER) $(INCLUDE_OPENCV) $(LINK_PTHREAD)
 client: $(CLIENT)
-	$(CC) $(CLIENT) -o $(CLI)
+	$(CXX) $(CLIENT) -o $(CLI)
 opencv: $(OPEN_CV)
 	$(CXX) $(OPEN_CV) -o $(CV) $(INCLUDE_OPENCV)
 pthread: $(PTHREAD)
-	$(CC) $(PTHREAD) -o $(PTH) $(LINK_PTHREAD)
+	$(CXX) $(PTHREAD) -o $(PTH) $(LINK_PTHREAD)
 
 .PHONY: clean
 
