--- a/hw2/Makefile
+++ b/hw2/Makefile
@@ -1,5 +1,5 @@
-CC = gcc -Wall -O3
-CXX = g++ -Wall -O3
+# CC = gcc -Wall -O3
+CXX = g++ -Wall -O3 -std=c++17
 INCLUDE_OPENCV = `pkg-config --cflags --libs opencv4`
 LINK_PTHREAD = -lpthread
 
@@ -8,21 +8,25 @@ SERVER = server.cpp
 VIDEO_TEST = video-test.cpp
 PTHREAD = pthread.cpp
 PKT_UTIL = pkt_util.cpp
+CMD_UTIL = cmd_util.cpp
 
 CLI = client
 SER = server
 VT = video-test
 PTH = pthread
 PKU = pkt_util.o
+CMU = cmd_util.o
 
 all: server client
-  
-$(SER): $(SERVER) $(PKU)
-	$(CXX) $(SERVER) $(PKU) -o $(SER) $(INCLUDE_OPENCV) $(LINK_PTHREAD)
-$(CLI): $(CLIENT) $(PKU)
-	$(CXX) $(CLIENT) $(PKU) -o $(CLI) $(INCLUDE_OPENCV) $(LINK_PTHREAD)
+$(SER): $(SERVER) $(PKU) $(CMU)
+	$(CXX) $(SERVER) $(PKU) $(CMU) -o $(SER) $(INCLUDE_OPENCV) $(LINK_PTHREAD)
+$(CLI): $(CLIENT) $(PKU) $(CMU)
+	$(CXX) $(CLIENT) $(PKU) $(CMU) -o $(CLI) $(INCLUDE_OPENCV) $(LINK_PTHREAD)
 $(PKU): $(PKT_UTIL)
 	$(CXX) -c $(PKT_UTIL) $(INCLUDE_OPENCV)
+$(CMU): $(CMD_UTIL)
+	$(CXX) -c $(CMD_UTIL) $(INCLUDE_OPENCV)
+
 $(VT): $(VIDEO_TEST)
 	$(CXX) $(VIDEO_TEST) -o $(VT) $(INCLUDE_OPENCV) $(LINK_PTHREAD)
 $(PTH): $(PTHREAD)
@@ -31,4 +35,4 @@ $(PTH): $(PTHREAD)
 .PHONY: clean
 
 clean:
-	rm $(CLI) $(SER) $(PKU)
+	rm $(CLI) $(SER) $(PKU) $(CMU) $(VT) $(PTH)
