--- a/hw2/.vscode/settings.json
+++ b/hw2/.vscode/settings.json
@@ -75,6 +75,7 @@
         "queue": "cpp",
         "forward_list": "cpp",
         "cfenv": "cpp",
-        "typeindex": "cpp"
+        "typeindex": "cpp",
+        "climits": "cpp"
     }
 }
