finish programming part

--- a/hw2/Makefile
+++ b/hw2/Makefile
@@ -22,9 +22,9 @@ $(SER): $(SERVER) $(PKU) $(CMU)
 	$(CXX) $(SERVER) $(PKU) $(CMU) -o $(SER) $(INCLUDE_OPENCV) $(LINK_PTHREAD)
 $(CLI): $(CLIENT) $(PKU) $(CMU)
 	$(CXX) $(CLIENT) $(PKU) $(CMU) -o $(CLI) $(INCLUDE_OPENCV) $(LINK_PTHREAD)
-$(PKU): $(PKT_UTIL)
+$(PKU): $(PKT_UTIL) pkt_util.hpp
 	$(CXX) -c $(PKT_UTIL) $(INCLUDE_OPENCV)
-$(CMU): $(CMD_UTIL)
+$(CMU): $(CMD_UTIL) cmd_util.hpp
 	$(CXX) -c $(CMD_UTIL) $(INCLUDE_OPENCV)
 
 $(VT): $(VIDEO_TEST)
@@ -35,4 +35,4 @@ $(PTH): $(PTHREAD)
 .PHONY: clean
 
 clean:
-	rm $(CLI) $(SER) $(PKU) $(CMU) $(VT) $(PTH)
+	rm $(CLI) $(SER) $(PKU) $(CMU)
