fix logging format and support localhost as ip

--- a/hw3/Makefile
+++ b/hw3/Makefile
@@ -18,7 +18,7 @@ RDT_OBJ=rdt.o
 all: agent sender receiver
 
 $(AGENT_EXEC): $(AGENT_SRC) $(RDT_OBJ)
-	$(CXX) $(CXXFLAGS) $(AGENT_SRC) -o $(AGENT_EXEC)
+	$(CXX) $(CXXFLAGS) $(AGENT_SRC) $(RDT_OBJ) -o $(AGENT_EXEC) $(LINK_ZLIB)
 $(SEND_EXEC): $(SEND_SRC) $(RDT_OBJ)
 	$(CXX) $(CXXFLAGS) $(SEND_SRC) $(RDT_OBJ) -o $(SEND_EXEC) $(INCLUDE_OPENCV) $(LINK_ZLIB)
 $(RECV_EXEC): $(RECV_SRC) $(RDT_OBJ)
